--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "main": "index.js",
  "type": "commonjs",
  "scripts": {
-  "start": "bash process.sh"
+  "start": "node koyeb.js"
  },
  "keywords": [
   "termux",
