--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "figlet": "^1.5.0",
   "file-type": "^16.5.3",
   "fluent-ffmpeg": "^2.1.2",
+  "forever": "^4.0.3",
   "form-data": "^4.0.0",
   "fs": "0.0.1-security",
   "g-i-s": "^2.1.6",
